# ==================================================================
#  Codac - cmake configuration file
# ==================================================================

  list(APPEND CODAC_SYMPY_SRC
    #${CMAKE_CURRENT_SOURCE_DIR}/codac2_sympy.cpp
    #${CMAKE_CURRENT_SOURCE_DIR}/codac2_sympy.h
  )

################################################################################
# Looking for pybind11
################################################################################

  add_subdirectory(
    ${CMAKE_CURRENT_SOURCE_DIR}/../../python/pybind11
    ${CMAKE_CURRENT_BINARY_DIR}/pybind11
  )

################################################################################
# Create the target for libcodac-sympy
################################################################################

  #if(NOT CMAKE_CXX_STANDARD)
  #  set(CMAKE_CXX_STANDARD 20)
  #  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  #endif()

  add_library(codac-sympy ${CODAC_SYMPY_SRC})
  target_include_directories(codac-sympy PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/
  )
  target_link_libraries(codac-sympy PUBLIC Ibex::ibex pybind11::embed)
  
################################################################################
# Installation of libcodac-sympy files
################################################################################
  
# Getting header files from sources

  foreach(srcfile ${CODAC_SYMPY_SRC})
    if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
      list(APPEND CODAC_SYMPY_HDR ${srcfile})
      file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
    endif()
  endforeach()

# Generating the file codac-sympy.h

  set(CODAC_SYMPY_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/codac-sympy.h)
  file(WRITE ${CODAC_SYMPY_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
  file(APPEND ${CODAC_SYMPY_MAIN_HEADER} "#ifndef __CODAC_SYMPY_H__\n#define __CODAC_SYMPY_H__\n\n")
  foreach(header_path ${CODAC_SYMPY_HDR})
    get_filename_component(header_name ${header_path} NAME)
    file(APPEND ${CODAC_SYMPY_MAIN_HEADER} "#include <${header_name}>\n")
  endforeach()
  file(APPEND ${CODAC_SYMPY_MAIN_HEADER} "\n#endif /* __CODAC_SYMPY_H__ */\n")
  file(COPY ${CODAC_SYMPY_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)

# Install files in system directories

  install(TARGETS codac-sympy DESTINATION ${CMAKE_INSTALL_LIBDIR})
  install(FILES ${CODAC_SYMPY_HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/codac-sympy)
  install(FILES ${CODAC_SYMPY_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/codac-sympy)