# ==================================================================
#  Codac - cmake configuration file
# ==================================================================

  list(APPEND CODAC_SYMPY_SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/codac2_sympy_empty.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/codac2_sympy_empty.h
  )

################################################################################
# Looking for pybind11
################################################################################

  add_subdirectory(
    ${CMAKE_CURRENT_SOURCE_DIR}/../../python/pybind11
    ${CMAKE_CURRENT_BINARY_DIR}/pybind11
  )

################################################################################
# Create the target for libcodac-sympy
################################################################################

  #if(NOT CMAKE_CXX_STANDARD)
  #  set(CMAKE_CXX_STANDARD 20)
  #  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  #endif()

  #add_library(${PROJECT_NAME}-sympy
  
  pybind11_add_module(${PROJECT_NAME}-sympy MODULE
    ${CODAC_SYMPY_SRC})
  target_include_directories(${PROJECT_NAME}-sympy PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/
  )
  target_link_libraries(${PROJECT_NAME}-sympy PUBLIC Ibex::ibex) # pybind11::embed)
  

################################################################################
# For the generation of the PKG file
################################################################################
  
  set(CODAC_PKG_CONFIG_CFLAGS "${CODAC_PKG_CONFIG_CFLAGS} -I\${includedir}/${PROJECT_NAME}-sympy" PARENT_SCOPE)
  set(CODAC_PKG_CONFIG_LIBS "${CODAC_PKG_CONFIG_LIBS} -l${PROJECT_NAME}-sympy" PARENT_SCOPE)

  
################################################################################
# Installation of libcodac-sympy files
################################################################################
  
# Getting header files from sources

  foreach(srcfile ${CODAC_SYMPY_SRC})
    if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
      list(APPEND CODAC_SYMPY_HDR ${srcfile})
      file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
    endif()
  endforeach()

# Generating the file codac-sympy.h

  set(CODAC_SYMPY_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/codac-sympy.h)
  set(CODAC_MAIN_SUBHEADERS ${CODAC_MAIN_SUBHEADERS} "codac-sympy.h" PARENT_SCOPE)
  file(WRITE ${CODAC_SYMPY_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
  file(APPEND ${CODAC_SYMPY_MAIN_HEADER} "#pragma once\n\n")
  foreach(header_path ${CODAC_SYMPY_HDR})
    get_filename_component(header_name ${header_path} NAME)
    file(APPEND ${CODAC_SYMPY_MAIN_HEADER} "#include <${header_name}>\n")
  endforeach()
  file(COPY ${CODAC_SYMPY_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)

# Install files in system directories

  install(TARGETS ${PROJECT_NAME}-sympy DESTINATION ${CMAKE_INSTALL_LIBDIR})
  install(FILES ${CODAC_SYMPY_HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-sympy)
  install(FILES ${CODAC_SYMPY_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}-sympy)